Fixed footer visibillity issue

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ nav .right a span{
 
 .skills-sec{
     color: var(--text-color);
-    margin-bottom: 100px;
+    margin-bottom: 75px;
     padding: 0 50px;
     
     
